Same for VVM and GPUVVM with topo, turbulence, and all processes. 1: Fix z-advection rho division and move it from Takacs to Advection. 2: Modify TimeIntegrator order. 3: Turn on all turbulence but still need to test non-constant RKX.

--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -107,7 +107,8 @@
             "BGAU",
             "CGAU",
             "bn",
-            "cn"
+            "cn",
+            "u_mean"
         ],
         "output_grid": {
             "x_start": 0,
