Change topo mask in turbulence to bit operation

--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -81,34 +81,7 @@
             "lw_heating",
             "net_heating",
             "net_sw_flux",
-            "net_lw_flux",
-            "DHWU1",
-            "DHWU2",
-            "DHWV1",
-            "DHWV2",
-            "DHWW1",
-            "DHWW2",
-            "DHVU1",
-            "DHVU2",
-            "DHVV1",
-            "DHVV2",
-            "DHVW1",
-            "DHVW2",
-            "DHUU1",
-            "DHUU2",
-            "DHUV1",
-            "DHUV2",
-            "DHUW1",
-            "DHUW2",
-            "ITYPEU",
-            "ITYPEV",
-            "ITYPEW",
-            "AGAU",
-            "BGAU",
-            "CGAU",
-            "bn",
-            "cn",
-            "u_mean"
+            "net_lw_flux"
         ],
         "output_grid": {
             "x_start": 0,
