feat(surface): add surface flux basic template

--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -284,6 +284,9 @@
         },
         "turbulence": {
             "enable_turbulence": true
+        },
+        "surface": {
+            "enable_surface": true
         }
     },
     "optimization": {
